--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "nest build",
     "start": "nest start",
-    "start:dev": "nest start --watch"
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch"
   },
   "license": "UNLICENSED",
   "dependencies": {
