--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,6 +8,7 @@
     "test": "test"
   },
   "scripts": {
+    "nest": "nest",
     "build": "nest build",
     "start": "nest start",
     "start:dev": "nest start --watch",
