--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,10 +20,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
-    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sqlite3": "^5.1.4",
     "typeorm": "^0.3.11"
   },
   "devDependencies": {
